[gd_scene load_steps=3 format=3 uid="uid://c02s7yf50nmet"]

[ext_resource type="Script" path="res://Scripts/character.gd" id="1_28gla"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rh7ij"]
radius = 4.0
height = 18.0

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 2
collision_mask = 2
script = ExtResource("1_28gla")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_rh7ij")

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 23.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
